<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="534dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/giphy_1"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/activity_horizontal_padding"
                android:id="@+id/textView4"
                android:text="Create Account"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_padding">
                <TextView
                    android:text="@string/firstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/firstname" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_padding">
            <TextView
                android:text="@string/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/lastname" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_padding">
            <TextView
                android:text="@string/Userid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/userid" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_padding">
            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_padding">
            <TextView
                android:text="@string/confirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/confirm_password" />
            </LinearLayout>

            <Button
                android:text="@string/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button"
                android:background="@color/colorAccent"
                android:textColor="@android:color/background_light"
                android:onClick="SignUp"
                android:textSize="18sp"
                />

            <Button
                android:text="@string/alreadyMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                android:onClick="Login"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal" />
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>